[package]
name = "object-detection-rs"
version = "0.1.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
tensorflow = "0.11.0"
image = "0.20.1"
ndarray = "0.12.1"
imageproc = "0.17.0"
hashbrown = "0.1.7"

[build-dependencies]
reqwest = "0.9.6"
tar = "0.4.20"
flate2 = "1.0.6"