[package]
name = "espial"
version = "0.1.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Object detection using single shot multibox detector"
readme = "README.md"
keywords = ["computer_vision", "tensorflow", "object detection"]
repository = "https://github.com/mstallmo/espial"

[badges]
travis-ci = { repository = "https://github.com/mstallmo/espial", branch = "master" }

[dependencies]
tensorflow = "0.11.0"
image = "0.20.1"
ndarray = "0.12.1"
imageproc = "0.17.0"
hashbrown = "0.1.7"
